--- a/css/btn_animation.css
+++ b/css/btn_animation.css
@@ -1,28 +1,4 @@
-.btn_shop:hover {
-    color: gold;
-    background-color: rgb(61, 61, 61);
-    text-decoration: none;
-    animation-name: out;
-    transition: 0.5s;
-}
-
-.btn_news:hover {
-    color: gold;
-    background-color: rgb(61, 61, 61);
-    text-decoration: none;
-    animation-name: out;
-    transition: 0.5s;
-}
-
-.btnmes_text:hover {
-    color: gold;
-    background-color: rgb(61, 61, 61);
-    text-decoration: none;
-    animation-name: out;
-    transition: 0.5s;
-}
-
-.btnback:hover {
+#Btn:hover {
     color: gold;
     background-color: rgb(61, 61, 61);
     text-decoration: none;
